githum fetch commands memo add

--- a/memo.html
+++ b/memo.html
@@ -12,6 +12,27 @@
     <li>リモートリポジトリにアクセスするもっとも一般的な方法はウェブ上にあるリポジトリへのURL経由でアクセスする</li>
     <li>git remoteの出力はoriginという単語に過ぎない。originという単語はショートネームと呼ばれている</li>
     <li>originという名前はメインのリポジトリを指すデファクト名</li>
-    <li></li>
+    <li>gitのログについている origin/masterはトラッキングブランチと呼ばれている</li>
+    <li>重要なことはorigin/masterブランチがremoteブランチ上に存在するものと常に同じ手はないということ</li>
+    <li>誰かがリモートリポジトリを変更した場合origin/masterトラッキングブランチは移動しない。自ら更新しないといけない</li>
+    <li>リモートからの変更を引き出す</li>
+    <li>githubにはwebインターフェースがあるためインターフェイスを介して手動でコミットを追加できるがやってはいけない</li>
+    <li>git pushはリモートリポジトリをローカルリポジトリに同期させる</li>
+    <li>git statで変更されたファイルとその中の追加または削除されたものがわかる</li>
+    <li>自動的にローカルブランチをトラッキングブランチとマージしたくないときはgit fetchを使う</li>
+    <li>git pullはトラッキングをしているので(追加席をしている)存在するブランチを見ようとするはず</li>
+    <li>自分が持っていないリポジトリにコミットがあってもリモートリポジトリ</li>
+    <li>現在localとremoteのコミットが同じだとする。その状態でgit fetchをするとorigin/masterは新しくなるが, masterha
+    そのままである。masterをorigin/masterと同期させるにはgit merget origin/masterを実行する</li>
+    <li>git log --onelineのコマンドでどのcommitがどこまで進んでいるか確認しながらすると良い</li>
+    <li>git fetchはリモートジポジトリのブランチからkミットを取得するために使われるがコミットが受信されたあとでローカルブランチとリモートのトラッキングブランチを自動的にマージしない</li>
+    <li>git fetchはリモートブランチ上のコミットがローカルリポジトリにコピーされる。</li>
+    <li>ローカルのトラッキングブランチがもっとも最近のコミットを指すように移動する</li>
+    <li>この段階でローカルブランチが全く変更されない、git fetchはpullの半分。もう半分はmergeする側面</li>
+    <li>使い所</li>
+    <li>リモートブランチとローカルブランチの両方が他のブランチにはない変更を加えている場合</li>
+    <li>特定のリポジトリがあるとする。リモートでは新たなコミットがある場合にはgit pullできない</li>
+    <li>一度git fetchしてトラッキングブランチを更新, その後origin/masterにlocalのブランチをmerge</li>
+    <li>その後remoteにpush</li>
   </body>
 </html>
