--- a/memo.html
+++ b/memo.html
@@ -35,5 +35,12 @@
     <li>一度git fetchしてトラッキングブランチを更新, その後origin/masterにlocalのブランチをmerge</li>
     <li>その後remoteにpush</li>
     <li>masterにテスト的に入れました</li>
+    <li>fetchテスト</li>
+    <li>masterにテスト的に入れました</li>
+    <li>1を追加</li>
+    <li>fetchテスト</li>
+    <li>masterにテスト的に入れました</li>
+    <li>fetchテスト</li>
+    <li>スペーs８が入った</li>
   </body>
 </html>
