--- a/memo.html
+++ b/memo.html
@@ -34,5 +34,8 @@
     <li>特定のリポジトリがあるとする。リモートでは新たなコミットがある場合にはgit pullできない</li>
     <li>一度git fetchしてトラッキングブランチを更新, その後origin/masterにlocalのブランチをmerge</li>
     <li>その後remoteにpush</li>
+    <li>masterにテスト的に入れました</li>
+    <li>1を追加</li>
+    <li>fetchテスト</li>
   </body>
 </html>
