--- a/memo.html
+++ b/memo.html
@@ -37,5 +37,7 @@
     <li>masterにテスト的に入れました</li>
     <li>1を追加</li>
     <li>fetchテスト</li>
+    <li>masterにテスト的に入れました</li>
+    <li>fetchテスト</li>
   </body>
 </html>
